# HH

./: .gitignore  AGENTS.md  README.md  SPEC.md  colab_householder_rope_scaling_harness.ipynb  demo_householder_rope.ipynb  demo_householder_rope_jax.ipynb  diagnostics_householder_rope.py  diagnostics_householder_rope_jax.py  pyproject.toml
artifacts/: attention_block_benchmark_windows_smoke.json  attention_block_benchmark_windows_smoke_v2.json  attention_block_benchmark_wsl_pinned_large.json  attention_block_benchmark_wsl_pinned_large_rerun.json  attention_block_benchmark_wsl_pinned_long_context.json  backend_comparison.json  backend_comparison_windows_smoke.json  backend_comparison_windows_smoke_v2.json  backend_comparison_windows_smoke_v3.json  backend_comparison_windows_smoke_v4.json  backend_comparison_wsl_uv.json  backend_comparison_wsl_uv_long_context_gpu.json  backend_comparison_wsl_uv_pinned_gpu.json  householder_rope_jax_smoke_metrics.json  householder_rope_smoke_metrics.json
examples/: minimal_example.py  minimal_example_flax.py  minimal_example_jax.py
requirements/: wsl_uv_pinned_gpu.txt
scripts/: plot_attention_block_benchmark.py  plot_backend_comparison.py  run_attention_block_benchmark.py  run_backend_comparison.py  run_real_data_scale_harness.py  run_smoke.py  run_smoke_jax.py
src/householder_rope/: __init__.py  __main__.py  attention.py  (+7 more)
tests/: test_attention_benchmark.py  test_colab_scaling_harness_notebook.py  test_householder_rope.py  test_householder_rope_flax.py  test_householder_rope_jax.py  test_real_data_scale_harness.py  test_smoke.py
